# sbanken_does_nynab

./: .gitignore  .gitlab-ci.yml  Cargo.toml  log4rs.yml
src/: main.rs  model.rs
src/config/: config.rs
src/helpers/: http.rs
src/sbanken/: api.rs  config.rs  data.rs  helpers.rs  mod.rs  model.rs
src/ynab/: api.rs  config.rs  data.rs  helpers.rs  mod.rs  model.rs
